syntax = "proto3";

package inventory;

option go_package = "./proto";

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse); // Added
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message CreateProductResponse {
  string id = 1;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message UpdateProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message FilterParams {
  string name = 1;
  double min_price = 2;
  double max_price = 3;
}

message PaginationParams {
  int32 page = 1;
  int32 per_page = 2;
}

message ListProductsRequest {
  FilterParams filter = 1;
  PaginationParams pagination = 2;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}

message UpdateStockRequest {
  string id = 1;
  int32 stock = 2;
  bool decrement = 3;
}

message UpdateStockResponse {
  bool success = 1;
}