syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
  rpc DeleteOrderItemsByProduct(DeleteOrderItemsByProductRequest) returns (DeleteOrderItemsByProductResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItemRequest items = 2;
}

message OrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double price = 5;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  double total_price = 3;
  string status = 4;
  int64 created_at = 5;
  repeated OrderItem items = 6;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  string status = 1;
}

message GetUserOrdersRequest {
  string user_id = 1;
}

message GetUserOrdersResponse {
  repeated OrderResponse orders = 1;
}
message DeleteOrderItemsByProductRequest {
  string product_id = 1;
}

message DeleteOrderItemsByProductResponse {
  bool success = 1;
}

